--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en-ca">
 <head>
@@ -12,10 +13,10 @@
 
   <div class="banner">
     <img class="img-flex" src="images/andromeda.jpg" alt="">
-    <div class="banner-content">
-      <div>
-        <h1>Space & Time Explorer Person</h1>
-        <p>Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
+    <div class="banner-content text-center">
+      <div class="max-length">
+        <h1 class="push-0 yotta bold">Space & Time Explorer Person</h1>
+        <p class="tera bold">Space & Time Explorer Person, who has a name that nobody knows (except his Wife), travels the time vortex solving problems, meeting different alien species and generally being meddlesome.</p>
       </div>
     </div>
   </div>
